--- a/scilab/modules/scicos/Makefile.in
+++ b/scilab/modules/scicos/Makefile.in
@@ -731,6 +731,7 @@ HELP_CHAPTERLANG = en_US fr_FR pt_BR
 @SCICOS_TRUE@			-I$(top_srcdir)/modules/scicos_blocks/includes \
 @SCICOS_TRUE@			-I$(top_srcdir)/modules/action_binding/includes \
 @SCICOS_TRUE@			-I$(top_srcdir)/modules/time/includes \
+@SCICOS_TRUE@			-I$(top_srcdir)/modules/api_scilab/includes \
 @SCICOS_TRUE@			-I$(top_srcdir)/modules/scicos/src/scicos_sundials/include \
 @SCICOS_TRUE@			-I$(top_srcdir)/modules/scicos/src/scicos_sundials/include/sundials \
 @SCICOS_TRUE@			-I$(top_srcdir)/modules/scicos/src/scicos_sundials/src/ida
