better way to do dll (gui module)

--- a/scilab/modules/gui/src/c/gui.vcproj
+++ b/scilab/modules/gui/src/c/gui.vcproj
@@ -63,14 +63,14 @@
 			<Tool
 				Name="VCPreLinkEventTool"
 				Description="Make dependencies"
-				CommandLine="lib /DEF:&quot;$(InputDir)LibScilab_Import.def&quot; /SUBSYSTEM:WINDOWS /MACHINE:X86 /OUT:&quot;$(InputDir)LibScilab.lib&quot; 1&gt;NUL 2&gt;NUL&#x0D;&#x0A;cd $(IntDir) &gt;nul&#x0D;&#x0A;for %%f in (*.obj) do  ..\..\..\..\..\bin\dumpexts -o %%~nf.def -n scigui.dll %%f &gt;NUL&#x0D;&#x0A;copy *.def guitmp.def  &gt;NUL&#x0D;&#x0A;copy ..\gui_header.def+guitmp.def  ..\gui.def &gt;NUL&#x0D;&#x0A;del *.def  &gt;NUL&#x0D;&#x0A;cd ..  &gt;NUL&#x0D;&#x0A;"
+				CommandLine="lib /DEF:&quot;$(InputDir)LibScilab_Import.def&quot; /SUBSYSTEM:WINDOWS /MACHINE:X86 /OUT:&quot;$(InputDir)LibScilab.lib&quot; 1&gt;NUL 2&gt;NUL&#x0D;&#x0A;"
 			/>
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="..\..\..\..\bin\scilocalization.lib libscilab.lib"
 				OutputFile="../../../../bin/sci$(ProjectName).dll"
 				LinkIncremental="1"
-				ModuleDefinitionFile="gui.def"
+				ModuleDefinitionFile=""
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
@@ -146,14 +146,14 @@
 			<Tool
 				Name="VCPreLinkEventTool"
 				Description="Make dependencies"
-				CommandLine="lib /DEF:&quot;$(InputDir)LibScilab_Import.def&quot; /SUBSYSTEM:WINDOWS /MACHINE:X64 /OUT:&quot;$(InputDir)LibScilab.lib&quot; 1&gt;NUL 2&gt;NUL&#x0D;&#x0A;cd $(IntDir) &gt;nul&#x0D;&#x0A;for %%f in (*.obj) do  ..\..\..\..\..\bin\dumpexts -o %%~nf.def -n scigui.dll %%f &gt;NUL&#x0D;&#x0A;copy *.def guitmp.def  &gt;NUL&#x0D;&#x0A;copy ..\gui_header.def+guitmp.def  ..\gui.def &gt;NUL&#x0D;&#x0A;del *.def  &gt;NUL&#x0D;&#x0A;cd ..  &gt;NUL&#x0D;&#x0A;"
+				CommandLine="lib /DEF:&quot;$(InputDir)LibScilab_Import.def&quot; /SUBSYSTEM:WINDOWS /MACHINE:X64 /OUT:&quot;$(InputDir)LibScilab.lib&quot; 1&gt;NUL 2&gt;NUL&#x0D;&#x0A;"
 			/>
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="libscilab.lib"
 				OutputFile="../../../../bin/sci$(ProjectName).dll"
 				LinkIncremental="1"
-				ModuleDefinitionFile="gui.def"
+				ModuleDefinitionFile=""
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
@@ -231,14 +231,14 @@
 			<Tool
 				Name="VCPreLinkEventTool"
 				Description="Make dependencies"
-				CommandLine="lib /DEF:&quot;$(InputDir)LibScilab_Import.def&quot; /SUBSYSTEM:WINDOWS /MACHINE:X86 /OUT:&quot;$(InputDir)LibScilab.lib&quot; 1&gt;NUL 2&gt;NUL&#x0D;&#x0A;cd $(IntDir) &gt;nul&#x0D;&#x0A;for %%f in (*.obj) do  ..\..\..\..\..\bin\dumpexts -o %%~nf.def -n scigui.dll %%f &gt;NUL&#x0D;&#x0A;copy *.def guitmp.def  &gt;NUL&#x0D;&#x0A;copy ..\gui_header.def+guitmp.def  ..\gui.def &gt;NUL&#x0D;&#x0A;del *.def  &gt;NUL&#x0D;&#x0A;cd ..  &gt;NUL&#x0D;&#x0A;"
+				CommandLine="lib /DEF:&quot;$(InputDir)LibScilab_Import.def&quot; /SUBSYSTEM:WINDOWS /MACHINE:X86 /OUT:&quot;$(InputDir)LibScilab.lib&quot; 1&gt;NUL 2&gt;NUL&#x0D;&#x0A;"
 			/>
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="..\..\..\..\bin\scilocalization.lib libscilab.lib"
 				OutputFile="../../../../bin/sci$(ProjectName).dll"
 				LinkIncremental="1"
-				ModuleDefinitionFile="gui.def"
+				ModuleDefinitionFile=""
 				GenerateDebugInformation="false"
 				SubSystem="2"
 				OptimizeReferences="2"
@@ -320,14 +320,14 @@
 			<Tool
 				Name="VCPreLinkEventTool"
 				Description="Make dependencies"
-				CommandLine="lib /DEF:&quot;$(InputDir)LibScilab_Import.def&quot; /SUBSYSTEM:WINDOWS /MACHINE:X64 /OUT:&quot;$(InputDir)LibScilab.lib&quot; 1&gt;NUL 2&gt;NUL&#x0D;&#x0A;cd $(IntDir) &gt;nul&#x0D;&#x0A;for %%f in (*.obj) do  ..\..\..\..\..\bin\dumpexts -o %%~nf.def -n scigui.dll %%f &gt;NUL&#x0D;&#x0A;copy *.def guitmp.def  &gt;NUL&#x0D;&#x0A;copy ..\gui_header.def+guitmp.def  ..\gui.def &gt;NUL&#x0D;&#x0A;del *.def  &gt;NUL&#x0D;&#x0A;cd ..  &gt;NUL&#x0D;&#x0A;"
+				CommandLine="lib /DEF:&quot;$(InputDir)LibScilab_Import.def&quot; /SUBSYSTEM:WINDOWS /MACHINE:X64 /OUT:&quot;$(InputDir)LibScilab.lib&quot; 1&gt;NUL 2&gt;NUL&#x0D;&#x0A;"
 			/>
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="libscilab.lib"
 				OutputFile="../../../../bin/sci$(ProjectName).dll"
 				LinkIncremental="1"
-				ModuleDefinitionFile="gui.def"
+				ModuleDefinitionFile=""
 				GenerateDebugInformation="false"
 				SubSystem="2"
 				OptimizeReferences="2"
@@ -1079,6 +1079,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\includes\dynlib_gui.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\includes\EditBox.h"
 				>
 			</File>
@@ -1395,34 +1399,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\includes\sci_exportUI.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\includes\sci_mpopup.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\includes\sci_raise_window.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\includes\sci_uicontextmenu.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\includes\sci_uicontrol.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\includes\sci_uimenu.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\includes\sci_uiwait.h"
-				>
-			</File>
-			<File
 				RelativePath="..\jni\ScilabDisplayTree.hxx"
 				>
 			</File>
@@ -1674,10 +1650,6 @@
 				RelativePath="..\cpp\Widget.hxx"
 				>
 			</File>
-			<File
-				RelativePath="..\..\includes\write_scilab.h"
-				>
-			</File>
 		</Filter>
 		<Filter
 			Name="localization"
@@ -1690,10 +1662,6 @@
 		<Filter
 			Name="Libraries Dependencies"
 			>
-			<File
-				RelativePath=".\gui_header.def"
-				>
-			</File>
 			<Filter
 				Name="Imports"
 				>
