--- a/scilab/modules/randlib/Makefile.in
+++ b/scilab/modules/randlib/Makefile.in
@@ -104,8 +104,8 @@ am__objects_1 = libscirandlib_la-fsultra.lo libscirandlib_la-mt.lo \
 am__objects_2 = libscirandlib_la-gw_randlib.lo \
 	libscirandlib_la-sci_grand.lo
 am__objects_3 = gennf.lo genchi.lo setgmn.lo gengam.lo snorm.lo \
-	gennch.lo genmn.lo phrtsd.lo ignnbn.lo lennob.lo genf.lo \
-	genunf.lo genexp.lo genmul.lo genprm.lo gennor.lo
+	gennch.lo genmn.lo phrtsd.lo ignnbn.lo genf.lo genunf.lo \
+	genexp.lo genmul.lo genprm.lo gennor.lo
 am_libscirandlib_la_OBJECTS = $(am__objects_1) $(am__objects_2) \
 	$(am__objects_3)
 libscirandlib_la_OBJECTS = $(am_libscirandlib_la_OBJECTS)
@@ -387,7 +387,6 @@ src/fortran/gennch.f \
 src/fortran/genmn.f \
 src/fortran/phrtsd.f \
 src/fortran/ignnbn.f \
-src/fortran/lennob.f \
 src/fortran/genf.f \
 src/fortran/genunf.f \
 src/fortran/genexp.f \
@@ -739,9 +738,6 @@ phrtsd.lo: src/fortran/phrtsd.f
 
 ignnbn.lo: src/fortran/ignnbn.f
 	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(AM_FFLAGS) $(FFLAGS) -c -o ignnbn.lo `test -f 'src/fortran/ignnbn.f' || echo '$(srcdir)/'`src/fortran/ignnbn.f
-
-lennob.lo: src/fortran/lennob.f
-	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(AM_FFLAGS) $(FFLAGS) -c -o lennob.lo `test -f 'src/fortran/lennob.f' || echo '$(srcdir)/'`src/fortran/lennob.f
 
 genf.lo: src/fortran/genf.f
 	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(AM_FFLAGS) $(FFLAGS) -c -o genf.lo `test -f 'src/fortran/genf.f' || echo '$(srcdir)/'`src/fortran/genf.f
